# whisper-diarization

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
notebooks/: Whisper_Transcription_+_NeMo_Diarization.ipynb
scripts/: diarize.py  helpers.py  nemo_process.py  transcription_helpers.py
temp_outputs/: manifest_vad_input.json
temp_outputs/data/: input_manifest.json
temp_outputs/speaker_outputs/: subsegments_scale0.json  subsegments_scale1.json  subsegments_scale2.json  subsegments_scale3.json  subsegments_scale4.json
temp_outputs/speaker_outputs/embeddings/: subsegments_scale0_embeddings.pkl  subsegments_scale1_embeddings.pkl  subsegments_scale2_embeddings.pkl  subsegments_scale3_embeddings.pkl
temp_outputs/vad_outputs/: mono_file.frame  mono_file.txt  vad_out.json
temp_outputs/vad_outputs/overlap_smoothing_output_median_0.5/: mono_file.median
whisper_diarization/: app.py  audio_processing.py  concurrent_diarize.py  diarization.py  helpers.py  main.py  transcription.py  transcription_helpers.py
whisper_diarization/ctc_forced_aligner/: setup.py
whisper_diarization/ctc_forced_aligner/ctc_forced_aligner/: align.py  alignment_utils.py  norm_config.py  text_utils.py
